--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-name: John Smith
-description: "Nifty little description"
-url: ""
+name: Yeom sung wung
+description: "Web developer from JNU"
+url: "https://ysw0421.github.io/"
 
 
 # Delete the lines you don't need
 # about 5 elements are recomended
-github_username:  dashingcode
+github_username:  ysw0421
 codepen_username: your_codepen_username_goes_here
 facebook_username: your_facebook_username_goes_here
 vk_username: your_vk_username_goes_here
@@ -24,8 +24,8 @@ medium_username:  your_medium_username_goes_here
 tumblr_username: your_tumblr_username_goes_here
 weibo_username: your_weibo_username_goes_here
 lastfm_username: your_lastfm_username_goes_here
-blog_url: "/blog"
-email: your-email@example.domain
+blog_url: "https://ysw0421.github.io/"
+email: yeom4032yeom4032@gmail.com
 public_key_url: "https://raw.pastebin.com/LINK-TO-PUBLIC-KEY"
 
 
