--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ lastfm_username: your_lastfm_username_goes_here
 blog_url: "https://ysw0421.github.io/"
 email: yeom4032yeom4032@gmail.com
 public_key_url: "https://raw.pastebin.com/LINK-TO-PUBLIC-KEY"
+paginate: 10
 
 
 avatar: yes
