--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,9 @@ lastfm_username: your_lastfm_username_goes_here
 blog_url: "https://ysw0421.github.io/"
 email: yeom4032yeom4032@gmail.com
 public_key_url: "https://raw.pastebin.com/LINK-TO-PUBLIC-KEY"
+
 paginate: 10
+paginate_path: “/blog/page:num/”
 
 
 avatar: yes
