--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 name: Yeom sung wung
 description: "Web developer from JNU"
-url: "https://ysw0421.github.io/"
+url: "https://ysw0421.github.io"
 
 
 # Delete the lines you don't need
