--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,9 @@ email: yeom4032yeom4032@gmail.com
 public_key_url: "https://raw.pastebin.com/LINK-TO-PUBLIC-KEY"
 
 
+post: yes
+post_path: "_post/news.html"
+
 
 avatar: yes
 #avatar_img_path: "imgs/avatar.jpg""
