--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ avatar_img_path: "https://avatars2.githubusercontent.com/u/17301305"
 
 
 front_img: yes
-front_img_path: "imgs/wood_road.jpg"
+front_img_path: "/imgs/wood_road.jpg"
 #front_img_path: "https://external.url/image.jpg"
 
 
