--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 name: Yeom sung wung
 description: "Web developer from JNU"
 url: "https://ysw0421.github.io"
+disqus: "https-ysw0421-github-io"
 
 
 # Delete the lines you don't need
