--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ name: Yeom sung wung
 description: "Web developer from JNU"
 url: "https://ysw0421.github.io"
 disqus: "https-ysw0421-github-io"
+g-analytics: UA-130604214-1
 
 
 # Delete the lines you don't need
