--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "Web developer from JNU"
 url: "https://ysw0421.github.io"
 disqus: "https-ysw0421-github-io"
 g-analytics: UA-130604214-1
-
+encoding: utf-8
 
 # Delete the lines you don't need
 # about 5 elements are recomended
